# AEOAgents

./: .env.example  .gitignore  CLAUDE.md
backend/: README.md  clean_comparison.html  clean_faq.html  clean_howto.html  clean_info.html  generate_v4.py  generated_output.html  marzi_blog.html  marzi_comparison.html  marzi_comparison_v2.html  marzi_comparison_v3.html  marzi_comparison_v4.html  marzi_faq.html  marzi_faq_v2.html  marzi_faq_v3.html  marzi_faq_v4.html  marzi_howto.html  marzi_howto_v2.html  marzi_howto_v3.html  marzi_howto_v4.html  marzi_info.html  marzi_info_v2.html  marzi_info_v3.html  marzi_info_v4.html  output.txt  pyproject.toml  restyled_faq.html  restyled_faq_v2.html  run_pipeline.py
backend/app/: config.py  contentful_client.py  main.py  wordpress_client.py
backend/app/agents/: __init__.py  compiler.py  distributor.py  editor.py  pipeline.py  researcher.py  strategist.py  writer.py
backend/app/api/: content.py  router.py
backend/app/schemas/: content.py
backend/app/services/: brand_context.py  deduplication.py  generation.py  html_builder.py  jsonld.py  publisher.py  recommender.py  restyler.py  tagging.py  vector_store.py
backend/data/: inventory_embeddings.json  recommendations.jsonl
backend/data/chroma/: chroma.sqlite3
backend/tests/: conftest.py  test_api.py  test_deduplication.py  test_generation.py  test_html_builder.py  test_jsonld.py  test_publisher.py  test_schemas.py  test_tagging.py
firebase-hosting/: .firebaserc
firebase-hosting/.firebase/: hosting.cHVibGlj.cache
travel-blogs/: run_travel_pipeline.py
(+42 files in other folders)
